@@ -11,6 +11,4 @@ PLG_SEARCH_CONTENT_FIELD_CONTENT_DESC="Enables searching of all Articles"
 PLG_SEARCH_CONTENT_FIELD_CONTENT_LABEL="Articles"
 PLG_SEARCH_CONTENT_FIELD_SEARCHLIMIT_DESC="Number of search items to return"
 PLG_SEARCH_CONTENT_FIELD_SEARCHLIMIT_LABEL="Search Limit"
-PLG_SEARCH_CONTENT_FIELD_UNCATEGORISED_DESC="Search Uncategorised Articles?"
-PLG_SEARCH_CONTENT_FIELD_UNCATEGORISED_LABEL="Uncategorised Articles"
 PLG_SEARCH_CONTENT_XML_DESCRIPTION="Enables searching in Articles"
