@@ -172,8 +172,6 @@ JFIELD_PLG_SEARCH_ARCHIVED_DESC="Indicate whether to include archived items in t
 JFIELD_PLG_SEARCH_ARCHIVED_LABEL="Search Archived"
 JFIELD_PLG_SEARCH_SEARCHLIMIT_DESC="Sets the maximum number of results to return."
 JFIELD_PLG_SEARCH_SEARCHLIMIT_LABEL="Search Limit"
-JFIELD_PLG_SEARCH_UNCATEGORIZED_DESC="Indicate whether to include uncategorized items in the search."
-JFIELD_PLG_SEARCH_UNCATEGORIZED_LABEL="Search Uncategorized"
 JFIELD_PUBLISHED_DESC="Set publication state."
 JFIELD_READMORE_DESC="Add a custom text instead of Read More"
 JFIELD_READMORE_LABEL="Read More Text"
@@ -406,7 +404,6 @@ JGLOBAL_TITLE_ALPHABETICAL="Title Alphabetical"
 JGLOBAL_TITLE_REVERSE_ALPHABETICAL="Title Reverse Alphabetical"
 JGLOBAL_TOP="Top"
 JGLOBAL_TPL_CPANEL_LINK_TEXT="Return to Control Panel"
-JGLOBAL_UNCATEGORISED="Uncategorised"
 JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_USERNAME="User Name"
 JGLOBAL_VALIDATION_FORM_FAILED="Invalid form"
