@@ -35,8 +35,7 @@ $params = &$this->params;
 
 <?php if ($params->get('show_category')) : ?>
 		<dd class="category-name">
-			<?php $title = $this->escape($item->category_title);
-					$title = ($title) ? $title : JText::_('JGLOBAL_UNCATEGORISED');
+			<?php	$title = $this->escape($item->category_title);
 					$url = '<a href="' . JRoute::_(ContentHelperRoute::getCategoryRoute($item->catslug)) . '">' . $title . '</a>'; ?>
 			<?php if ($params->get('link_category') && $item->catslug) : ?>
 				<?php echo JText::sprintf('COM_CONTENT_CATEGORY', $url); ?>
