@@ -160,7 +160,6 @@ JGLOBAL_RIGHT="Right"
 JGLOBAL_STATE="State"
 JGLOBAL_SUBCATEGORIES="Subcategories"
 JGLOBAL_TITLE="Title"
-JGLOBAL_UNCATEGORISED="Uncategorised"
 JGLOBAL_USE_GLOBAL="Use Global"
 JGLOBAL_USERNAME="User Name"
 JGLOBAL_VALIDATION_FORM_FAILED="Invalid form"
