@@ -25,4 +25,3 @@ COM_SEARCH_SEARCH_KEYWORD_N_RESULTS_1="<strong>Total: One result found.</strong>
 COM_SEARCH_SEARCH_KEYWORD_N_RESULTS="<strong>Total: %s results found.</strong>"
 COM_SEARCH_SEARCH_ONLY="Search Only:"
 COM_SEARCH_SEARCH_RESULT="Search Result"
-COM_SEARCH_UNCATEGORISED_CONTENT="Uncategorised Content"
