@@ -34,15 +34,6 @@
 					<option value="1">JON</option>
 				</field>
 
-				<field name="search_uncategorised" type="radio"
-					default="0"
-					description="PLG_SEARCH_CONTENT_FIELD_UNCATEGORISED_DESC"
-					label="PLG_SEARCH_CONTENT_FIELD_UNCATEGORISED_LABEL"
-				>
-					<option value="0">JOFF</option>
-					<option value="1">JON</option>
-				</field>
-
 				<field name="search_archived" type="radio"
 					default="0"
 					description="PLG_SEARCH_CONTENT_FIELD_ARCHIVED_DESC"
