@@ -31,7 +31,8 @@ $ -> Language fix or change
  # [#21341] Tinymce has a comma error in JS. Thanks Janich.
  # [#21290] Extension Manager: Manage Message. Thanks Matt.
  # [#21330] Com_contact Patch. Thanks Angie.
-
+ ^ [#21266] Clean up code for removal of Uncategorised content
+ 
 07-Jul-2010 Jean-Marie Simonet
  $ [#21313] String in Banner.ini. Thanks Joseph.
  #$ [#21325] Ordering parameter in frontend edit doesn't make sense
